代码结构优化

--- a/configs/model_providers.yaml
+++ b/configs/model_providers.yaml
@@ -1,10 +1,10 @@
 # 默认使用的模型提供商（可选）
-default_provider: deepseek
+default_provider: lmstudio
 
 providers:
   302:
     base_url: https://api.302.ai/v1/chat/completions
-    model_name: gemini-2.0-flash-thinking-exp-01-21
+    model_name: gemini-2.0-pro-exp-02-05
     env_mapping:
       api_key: API_302_KEY
       base_url: API_302_BASE_URL
@@ -20,7 +20,7 @@ providers:
 
   aliyun:
     base_url: https://dashscope.aliyuncs.com/compatible-mode/v1
-    model_name: qwq-32b
+    model_name: qwq-plus
     env_mapping:
       api_key: DASHSCOPE_API_KEY
       base_url: ALIYUN_BASE_URL
