--- a/configs/model_providers.yaml
+++ b/configs/model_providers.yaml
@@ -20,7 +20,7 @@ providers:
 
   aliyun:
     base_url: https://dashscope.aliyuncs.com/compatible-mode/v1
-    model_name: qwq-32b
+    model_name: qwq-plus
     env_mapping:
       api_key: DASHSCOPE_API_KEY
       base_url: ALIYUN_BASE_URL
