--- a/configs/model_providers.yaml
+++ b/configs/model_providers.yaml
@@ -1,5 +1,5 @@
 # 默认使用的模型提供商（可选）
-default_provider: nvidia
+default_provider: aliyun
 
 providers:
   302:
@@ -57,7 +57,7 @@ providers:
       model_name: SILICONFLOW_MODEL
   vllm:
     base_url: http://localhost:8080/v1/
-    model_name: QwQ-32B-AWQ
+    model_name: DeepSeek-R1-Distill-Qwen-7B
     env_mapping:
       api_key: SILICONFLOW_API_KEY
       base_url: SILICONFLOW_BASE_URL
