--- a/configs/model_providers.yaml
+++ b/configs/model_providers.yaml
@@ -1,5 +1,5 @@
 # 默认使用的模型提供商（可选）
-default_provider: aliyun
+default_provider: deepseek
 
 providers:
   302:
@@ -20,7 +20,7 @@ providers:
 
   aliyun:
     base_url: https://dashscope.aliyuncs.com/compatible-mode/v1
-    model_name: qwq-plus
+    model_name: qwq-32b
     env_mapping:
       api_key: DASHSCOPE_API_KEY
       base_url: ALIYUN_BASE_URL
