--- a/configs/model_providers.yaml
+++ b/configs/model_providers.yaml
@@ -1,6 +1,6 @@
 # 默认使用的模型提供商（可选）
 # qwen2.5-72b-instruct qwq-32b
-default_provider: vllm
+default_provider: aliyun
 
 providers:
   302:
@@ -21,7 +21,7 @@ providers:
 
   aliyun:
     base_url: https://dashscope.aliyuncs.com/compatible-mode/v1
-    model_name: qwen2.5-72b-instruct
+    model_name: qwq-32b
     env_mapping:
       api_key: DASHSCOPE_API_KEY
       base_url: ALIYUN_BASE_URL
