--- a/configs/model_providers.yaml
+++ b/configs/model_providers.yaml
@@ -1,6 +1,6 @@
 # 默认使用的模型提供商（可选）
 # qwen2.5-72b-instruct qwq-32b QwQ-32B-AWQ  Qwen2.5-14B-Instruct-1M
-default_provider: aliyun
+default_provider: nvidia
 
 providers:
   302:
@@ -58,7 +58,7 @@ providers:
       model_name: SILICONFLOW_MODEL
   vllm:
     base_url: http://192.168.3.108:8080/v1/
-    model_name: Qwen2.5-14B-Instruct-1M
+    model_name: deepseek_model
     env_mapping:
       api_key: SILICONFLOW_API_KEY
       base_url: SILICONFLOW_BASE_URL
