--- a/configs/model_providers.yaml
+++ b/configs/model_providers.yaml
@@ -21,7 +21,7 @@ providers:
 
   aliyun:
     base_url: https://dashscope.aliyuncs.com/compatible-mode/v1
-    model_name: qwq-plus-latest
+    model_name: qwen-max
     env_mapping:
       api_key: DASHSCOPE_API_KEY
       base_url: ALIYUN_BASE_URL
