--- a/configs/model_providers.yaml
+++ b/configs/model_providers.yaml
@@ -1,6 +1,6 @@
 # 默认使用的模型提供商（可选）
 # qwen2.5-72b-instruct qwq-32b QwQ-32B-AWQ  Qwen2.5-14B-Instruct-1M   gemini-2.0-flash-thinking-exp-01-21 gemini-2.0-flash
-default_provider: 302
+default_provider: vllm
 
 providers:
   302:
@@ -65,7 +65,7 @@ providers:
       model_name: GEMINI_MODEL
   vllm:
     base_url: http://192.168.3.108:8080/v1/
-    model_name: QwQ-32B
+    model_name: Qwen3-32B
     env_mapping:
       api_key: SILICONFLOW_API_KEY
       base_url: SILICONFLOW_BASE_URL
